--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -38,7 +38,7 @@
             <mat-card [class.mat-elevation-z8]="true" class="category-card">
               <mat-card-header class="category-header">
                 <img class="category-card-icon" src="{{category.imgLink}}" alt="{{category.altTextCode | translate}}"/>
-                <div class="category-card-title">{{category.textCode | translate}}</div>
+                <div class="category-card-title"><b>{{category.textCode | translate}}</b></div>
               </mat-card-header>
               <mat-card-content class="expanded-content">
                 <p class="category-card-description">
