--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.css
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.css
@@ -1,10 +1,37 @@
 .main-container {
-    min-height: 100%;
-    height: auto;
-    padding: 5% 10% 0%;
+    padding: 10%;
     background: rgb(255, 255, 255);
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
+}
+
+.info {
+    margin-bottom: 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+}
+
+p {
+    color: rgb(0, 0, 0);
+    background: rgba(245, 245, 245, 0.2);
+    padding: 2vmin 3vmin;
+    border-radius: 5vmin;
+    text-align: justify;
+    font-size: 1.1rem;
+}
+  
+h1 {
+    color: rgb(0, 0, 0);
+    font-size: 5vmin;
+    font-weight: lighter;
+}
+
+h2{
+    font-size: 3vmin;
+    margin-left: 20px;
+    text-align: left;
+    color: black;
 }
 
 .whiteRoundedBlock{
@@ -24,8 +51,9 @@
 
 
 .bottomLine {
-    padding-top: 10vmin;
+    padding-top: 2vmin;
     padding-bottom: 10vmin;
+    margin-bottom: 4rem;
     border-bottom: var(--bs-ieee-bright-blue) 2px solid;
     vertical-align: middle;
     align-content: center;
@@ -79,11 +107,6 @@ mdb-card-text {
     text-align: left;
 }
 
-h1 {
-    color: black;
-    font-size: 5vmin;
-    font-weight: lighter;
-}
 
 .right {
     text-align: right;
@@ -111,10 +134,6 @@ h1 {
 
 .dottedlineright {
     border-right: whitesmoke dashed 1px;
-}
-
-h2 {
-    color: black;
 }
 
 .sponsorContact {
@@ -155,4 +174,18 @@ h2 {
     }
 
 
+}
+
+.course-title {
+    font-size: calc(1.5vw + 1rem);
+    font-weight: 400;
+    color: var(--bs-ieee-bright-blue-80);
+    letter-spacing: 1px;
+}
+
+.course-subtitle {
+    font-size: calc(0.7vw + 0.7rem);
+    color: var(--bs-ieee-bright-blue);
+    font-weight: 600;
+    margin-top: 0.5rem;
 }
