--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -2,7 +2,7 @@
   <div class="banner">
     <img src="../../../../../assets/image/events/iot/iot-banner.jpeg" class="max-width" alt="Banner IOT" />
   </div>
-  <div class="topbottomLine" id="home" style="margin-bottom:2%">
+  <div class="top_bottom_line" id="home" style="margin-bottom:2%">
     <div class="container">
       <div class="row">
         <div class="col-sm">
@@ -26,10 +26,10 @@
   <!-- Introductory text -->
   <div class="section">
     <h2 class="course-subtitle">{{ 'IOT.DESC.TITLE' | translate }}</h2>
-    <p class="desc-text">{{ 'IOT.DESC.TEXT.1' | translate }}</p>
-    <p class="desc-text">{{ 'IOT.DESC.TEXT.2' | translate }}</p>
-    <p class="desc-text">{{ 'IOT.DESC.TEXT.3' | translate }}</p>
-    <p class="desc-text">{{ 'IOT.DESC.TEXT.4' | translate }}</p>
+    <p>{{ 'IOT.DESC.TEXT.1' | translate }}</p>
+    <p>{{ 'IOT.DESC.TEXT.2' | translate }}</p>
+    <p>{{ 'IOT.DESC.TEXT.3' | translate }}</p>
+    <p>{{ 'IOT.DESC.TEXT.4' | translate }}</p>
   </div>
 
   <div class="section">
