chore: updated current sponsors and fixed sponsors component

--- a/src/app/shared/components/sponsor-component/sponsor-component.component.css
+++ b/src/app/shared/components/sponsor-component/sponsor-component.component.css
@@ -1,7 +1,7 @@
 /* Thick red border */
 
 .sponsor-listing {
-  display: inline-flex;
+  display: flex;
   flex-wrap: wrap;
   gap: 1rem 10rem;
   justify-content: center;
