--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
   </div>
-  <div class="row mr-5 ml-5 d-flex justify-content-center row-eq-height">
+  <div class="row d-flex justify-content-center row-eq-height">
     <!-- Eventos (material angular) -->
 
     <!-- new card grid -->
