--- a/src/app/modules/team/pages/team/team.component.css
+++ b/src/app/modules/team/pages/team/team.component.css
@@ -115,3 +115,26 @@ mat-panel-title {
 	}
 }
 
+.team-container {
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.expansion-panel {
+}
+
+@media screen and (max-width: 600px) {
+    .team-container {
+        margin-top: 0;
+        margin-right: 0;
+        margin-left: 0;
+    }
+    .expansion-panel {
+        padding: 0 !important;
+    }
+
+    .mat-expansion-panel-body {
+        padding: 0 !important;
+    }
+}
