--- a/src/app/shared/components/individual-card/individual-card.component.css
+++ b/src/app/shared/components/individual-card/individual-card.component.css
@@ -1,8 +1,7 @@
 mdb-card {
-    border-bottom-left-radius: 5vmin;
-    border-bottom-right-radius: 5vmin;
+    border-radius: 1vmin;
+    overflow: hidden;
     margin: 1.5vmin;
-    margin-top: 3em;
     color: black;
     padding-bottom: 1.5vmin;
     min-height: 300px;
@@ -37,7 +36,7 @@ h5 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0.25em 0;
+    margin: 0 0;
 }
 
 .iconContainer {
