--- a/src/app/shared/components/individual-card/individual-card.component.html
+++ b/src/app/shared/components/individual-card/individual-card.component.html
@@ -8,14 +8,13 @@
         <!-- Imagen principal -->
         <img height="201" width="268" mat-card-image
              [ngSrc]="person.photo" alt="Foto de {{person.name}}" loading="eager"
-             style="width: 100%;"
-        >
+             style="width: 100%; object-fit: contain;">
 
         <a>
             <div class="mask rgba-white-slight"></div>
         </a>
 
-        <mdb-card-body cascade="true" class="textContainer text-center pb-0 px-0">
+        <mdb-card-body cascade="true" class="textContainer text-center pb-2 px-0">
             <!-- Nombre -->
             <mdb-card-title>
               <h4 class="nameTextContainer">
