chore(data-analysis): updated exams tests + refactored some code

--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -39,7 +39,7 @@
   <!-- Sponsors -->
   <div>
     <h2 class="course-subtitle">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h2>
-    <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getBitCupSponsors()"></app-sponsor-component>
+    <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
   </div>
 
 </div>
