--- a/src/app/modules/ras/pages/ras/ras.component.html
+++ b/src/app/modules/ras/pages/ras/ras.component.html
@@ -37,7 +37,12 @@
       <p class="page-paragraph">{{ "RAS.ABOUTRAS.CONTENT2" | translate }}</p>
       <hr>
       <h2 class="section-title">{{ "RAS.TEAM.TITLE" | translate}}</h2>
-      <app-team-card [team]="team.team"></app-team-card>
+      <div *ngIf="team$ !== null && team$ | async as team; else loading">
+          <app-team-card [team]="team.team"></app-team-card>
+      </div>
+        <ng-template #loading>
+            <app-loading-spinner></app-loading-spinner>
+        </ng-template>
     </div>
   </div>
 
